KAS-4043 Replace now-removed component class with helper classes

--- a/app/templates/publications/overview/search.hbs
+++ b/app/templates/publications/overview/search.hbs
@@ -72,7 +72,7 @@
     <div class="auk-u-m-4">
       <div class="auk-o-grid auk-u-mb-2">
         <div class="auk-o-grid-col-2">
-          <div class="auk-box">
+          <div class="auk-u-bg-alt auk-u-p-3">
             <div class="auk-u-mb-2">
               <Search::MinisterFilter
                 @selected={{this.mandatees}}
