fix correctly changes url when changing document versions in document-preview-modal add queryparam to show active tab

--- a/app/components/documents/document-preview/document-preview-modal.hbs
+++ b/app/components/documents/document-preview/document-preview-modal.hbs
@@ -35,11 +35,12 @@
           @onCollapse={{this.toggleSidebar}}
           @onOpen={{this.toggleSidebar}}
           @piece={{this.selectedVersion}}
-          @onSelectVersion={{this.setSelectedVersion}}
+          @onSelectVersion={{@onSelectVersion}}
           @transitionBack={{@onClose}}
           @didDeletePiece={{@didDeletePiece}}
           @onChangeFile={{perform this.loadFile}}
           @activeTab={{@activeTab}}
+          @onTabChanged={{@onTabChanged}}
         />
       </div>
     </div>
