--- a/app/templates/document.hbs
+++ b/app/templates/document.hbs
@@ -3,4 +3,6 @@
   @onClose={{this.transitionBack}}
   @didDeletePiece={{this.didDeletePiece}}
   @activeTab={{this.activeTab}}
+  @onSelectVersion={{this.setSelectedVersion}}
+  @onTabChanged={{this.tabChanged}}
 />
