change order of filters on signatures

--- a/app/templates/signatures/index.hbs
+++ b/app/templates/signatures/index.hbs
@@ -177,7 +177,7 @@
                 @onChange={{this.changeSorting}}
               />
               <Utils::ThSortable
-                @label="Minister"
+                @label="Ministers"
                 @field="decision-activity.start-date"
                 @currentSorting={{this.sort}}
                 @onChange={{this.changeSorting}}
