change default radio selection

--- a/app/components/agenda/agenda-header/agenda-actions.hbs
+++ b/app/components/agenda/agenda-header/agenda-actions.hbs
@@ -282,8 +282,8 @@
       <fieldset>
         <legend class="auk-label">Bestand types</legend>
         <Auk::RadioList @layout="inline" as |List|>
-          <List.Radio @label="Alle bestanden" checked />
-          <List.Radio @label="Enkel PDF's" />
+          <List.Radio @label="Enkel PDF's" checked />
+          <List.Radio @label="Alle bestanden"  />
         </Auk::RadioList>
       </fieldset>
     </Auk::Modal::Body>
