change label on delete document

--- a/app/components/documents/document-details-panel.hbs
+++ b/app/components/documents/document-details-panel.hbs
@@ -108,7 +108,7 @@
             @alert={{true}}
             {{on "click" this.deleteSigned}}
           >
-            Verwijder document
+            Verwijder getekend document
           </AuButton>
         </div>
         {{else}}
