add check to see if subcase has been made confidential or not to prevent making documents confidential when this was not intended

--- a/app/components/subcase/subcase-titles-panel.hbs
+++ b/app/components/subcase/subcase-titles-panel.hbs
@@ -3,6 +3,7 @@
     @subcase={{@subcase}}
     @onCancel={{this.cancelEditing}}
     @onSave={{this.stopEditing}}
+    @startEditingConfidential={{this.startEditingConfidential}}
   />
 {{else}}
   <Subcase::SubcaseTitlesPanel::SubcaseTitlesPanelView
