KAS-4071 use local variable to track if toggle has been clicked

--- a/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-edit.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-edit.hbs
@@ -9,6 +9,7 @@
               data-test-agendaitem-titles-edit-confidential={{true}}
               @checked={{@subcase.confidential}}
               id="subcase-confidential"
+              @onChange={{set this "confidentialChanged" true}}
             />
           </div>
         {{/if}}
