--- a/app/components/subcase/subcase-titles-panel/subcase-titles-panel-edit.hbs
+++ b/app/components/subcase/subcase-titles-panel/subcase-titles-panel-edit.hbs
@@ -7,6 +7,7 @@
           data-test-subcase-titles-edit-confidential={{true}}
           @checked={{@subcase.confidential}}
           id="subcase-confidential"
+          @onChange={{set this "confidentialChanged" true}}
         />
       </div>
     </div>
