--- a/app/templates/signatures/index.hbs
+++ b/app/templates/signatures/index.hbs
@@ -1,4 +1,4 @@
-{{page-title (t "to-sign")}}
+{{page-title (t "to-start-up")}}
 
 {{#in-element this.customNavbarButtonsElement}}
   {{#unless (user-may "manage-only-specific-signatures")}}
