KAS-4041 revert some changes made to getters for disabled button status in components

--- a/app/components/cases/new-case.hbs
+++ b/app/components/cases/new-case.hbs
@@ -26,7 +26,7 @@
           data-test-new-case-save={{true}}
           @skin="primary"
           @disabled={{this.isCreateDisabled}}
-          @loading={{this.isLoading}}
+          @loading={{this.createCase.isRunning}}
           {{on "click" (perform this.createCase)}}
         >
           {{t "create-case"}}
